--- a/src/Components/News.css
+++ b/src/Components/News.css
@@ -41,7 +41,7 @@
 @media (max-width: 500px) {
     .fb-page-container {
         width: 100%;
-        padding: 0 10px; /* Add some padding on smaller screens */
+        padding: 0;
     }
 }
 
